ChangeLog for pommed
--------------------

version 1.5:
	- pommed: back to using eject(1) for CD ejection.

version 1.4:
	- pommed: add proper support for the PowerBook5,8 and PowerBook5,9
	(PMU05 machines); add Geyser keyboard identification, PMU05
	ambient light sensors and keyboard backlight. Thanks Gaudenz
	Steilin for the report and testing.
	- pommed: added a simple backlight toggle mode, used when the
	automatic backlight is disabled in the configuration file.
	- pommed: enumerate i2c adapters.

version 1.3:
	- gpomme: added configuration GUI, courtesy of Daniel G. SIEGEL.
	- gpomme: added elegant-bright and elegant-dark themes, courtesy
	of Natanael Arndt <arndtn@gmx.de>.
	- pommed: rewrote CD ejection routine; no longer depends on eject,
	sends the dbus notification before ejecting the CD.
	- pommed: add DBus methods to control pommed over DBus. Original
	patch by Alexis ROBERT <alexis@fnux.org>.
	- pommed: add keyboard backlight fading for automatic keyboard
	backlight. Based on a patch from Mario Oschwald
	<mario.oschwald@hpi.uni-potsdam.de>.
	- pommed: try harder to reopen the event devices when coming back
	from suspend.

version 1.2:
	- pommed: PowerBook5,5 has an ADB keyboard, not a USB keyboard.
	- Added October 2003 iBook G4 support (PowerBook6,3), patch by
	Arthur PETITPIERRE.
	- pommed: tell DBus clients who is adjusting the keyboard
	backlight, so they can decide to skip the notification if it's not
	the user itself.
	- gpomme: adapt to the new DBus notification.
	- wmpomme: adapt to the new DBus notification.
	- pommed: added support for nVidia GPUs.
	- pommed: added support for mouseemu users (mouseemu virtual
	keyboard)
	- pommed: rework keyboard backlight automatic mode, the backlight
	off key now works as a toggle for the automatic mode, as it does
	on Mac OS X
	- pommed: turn off keyboard backlight when lid is closed
	- pommed: added UNTESTED support for
		  + PowerBook3,3: PowerBook G4 Titanium 15" October 2001