@@ -3,6 +3,9 @@ ChangeLog for pommed
 
 version 1.5:
 	- pommed: back to using eject(1) for CD ejection.
+	- pommed: fallback to of_find_node_by_name() for LMU controller
+	detection; it seems some PowerBooks (5,4) do not have a node type
+	associated with the node in the device-tree.
 
 version 1.4:
 	- pommed: add proper support for the PowerBook5,8 and PowerBook5,9
